<resources>
    <string name="app_name">android-ioasys-books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books">Books</string>
    <string name="mail">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="wrong_mail_password">Email e/ou senha incorretos</string>
    <string name="search">Pesquisar</string>
    <string name="pages">Paginas</string>
    <string name="publisher">Editora</string>
    <string name="information">INFORMAÇÕES</string>
    <string name="publication">Publicação</string>
    <string name="language">Idioma</string>
    <string name="original_title">Titulo Original</string>
    <string name="isbn_10">ISBN-10</string>
    <string name="isbn_13">ISBN-13</string>
    <string name="review_from_publisher">RESENHA DA EDITORA</string>
    <string name="no_books_found">Não encontramos nenhum livro com esses termos</string>
    <string name="close">Fechar</string>
</resources>